--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,9 +26,8 @@ jobs:
 
     - name: Build
       run: |
-        go build
+        make build
 
     - name: Test
       run: |
-        go test -v ./...
-
+        make test
